--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/postcss": "^4.0.14",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
-    "next": "15.2.2",
+    "gh-pages": "^6.3.0",
+    "next": "^15.3.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
